--- a/index.html
+++ b/index.html
@@ -4,11 +4,26 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Attendance App</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     
+<div class="login">
+    <div class="login-page">
+        <div class="form">
+            <div class="logo">
+                <img src="images/saylani-logo.png" alt="">
+            </div>
+          <form class="login-form">
+            <input type="text" placeholder="username"/>
+            <input type="password" placeholder="password"/>
+            <button>login</button>
+          </form>
+        </div>
+      </div>
+</div>
+
 </body>
 <script src="app.js"></script>
 </html>
