--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Attendance App</title>
     <link rel="stylesheet" href="style.css">
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 </head>
 <body>
     
@@ -15,15 +16,15 @@
             <div class="logo">
                 <img src="images/saylani-logo.png" alt="">
             </div>
-          <form class="login-form">
-            <input type="text" placeholder="username"/>
-            <input type="password" placeholder="password"/>
-            <button>login</button>
+          <form onsubmit="loginBtn()" class="login-form">
+            <input id="email" type="text" placeholder="username"/>
+            <input id="password" type="password" placeholder="password"/>
+            <button >login</button>
           </form>
         </div>
       </div>
 </div>
 
 </body>
-<script src="app.js"></script>
+<script type="module" src="app.js"></script>
 </html>
