--- a/adminPanel/index.html
+++ b/adminPanel/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,8 +8,22 @@
     <title>Admin Panel</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    
+    <nav>
+        <div class="logo">
+            <img src="../images/saylani-logo.png" alt="">
+        </div>
+        <div class="createButtons">
+            <button id="createClassBtn">Create new class</button>
+            <button id="createStudentBtn">Create new student</button>
+        </div>
+        <div class="logOutBtn">
+            <button>Log Out</button>
+        </div>
+    </nav>
+
 </body>
 <script src="app.js"></script>
+
 </html>
