--- a/adminPanel/index.html
+++ b/adminPanel/index.html
@@ -48,23 +48,59 @@
                             <th scope="col">Schedule of Classes</th>
                             <th scope="col">Section Name</th>
                             <th scope="col">Teacher Name</th>
+                            <th scope="col">Attendance</th>
                         </tr>
                     </thead>
                     <tbody id="table-data">
-                        <!-- <tr>
-                            <th scope="row">1</th>
-                            <td>Mark</td>
-                            <td>Otto</td>
-                            <td>@mdo</td>
-                            <td>@mdo</td>
-                            <td>@mdo</td>
-                            <td>@mdo</td>
-                        </tr> -->
                     </tbody>
                 </table>
             </div>
             <div class="detailsOfStudent"></div>
             <div class="statisticsOfStudents"></div>
+
+
+
+
+
+            <div class="AttendanceModal">
+                <div>
+                    <div class="closeBtn"><i onclick="closingModal('AttendanceModal')" class="fa-solid fa-xmark"></i>
+                    </div>
+                    <div style="width: 100%;">
+                        <div class="searchBar">
+                            <input id="rollNumberInput" placeholder="Search roll number" type="text">
+                            <i onclick="showIdCard()" class="fa-solid fa-magnifying-glass"></i>
+                        </div>
+                        <div class="attendanceBar">
+                            <select>
+                                <option selected value="present">Present</option>
+                                <option value="absent">Absent</option>
+                                <option value="late">Late</option>
+                                <option value="leave">Leave</option>
+                            </select>
+                            <button onclick="markAttendance()">Mark</button>
+                        </div>
+                        <div class="dummyImage ">
+                            <div class="box">
+                                <div class="head">SMIT</div>
+                                <div class="line"></div>
+                                <div class="picture">
+                                    <img src="../images/audi.png" alt="">
+                                </div>
+                                <div class="name">Student Name</div>
+                                <div class="rollNumber">KH00000000000</div>
+                                <div class="courseName">Course Name</div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+
+
+
+
+
 
         </div>
     </div>
@@ -89,11 +125,9 @@
                         <br>
                         <select>
                             <option value="select">Class timing</option>
-                            <option value="a">a</option>
-                            <option value="a">a</option>
-                            <option value="a">a</option>
-                            <option value="a">a</option>
-                            <option value="a">a</option>
+                            <option value="09am - 11am">09am - 11am</option>
+                            <option value="11am - 01pm">11am - 01pm</option>
+                            <option value="07pm - 11pm">07pm - 11pm</option>
                         </select>
                     </div>
 
@@ -102,11 +136,9 @@
                         <br>
                         <select>
                             <option value="select">Schedule of class</option>
-                            <option value="a">a</option>
-                            <option value="a">a</option>
-                            <option value="a">a</option>
-                            <option value="a">a</option>
-                            <option value="a">a</option>
+                            <option value="MWF">MWF</option>
+                            <option value="TTF">TTF</option>
+                            <option value="sunday">Sunday</option>
                         </select>
                     </div>
                 </div>
@@ -116,11 +148,9 @@
                         <br>
                         <select>
                             <option value="select">Teacher's name</option>
-                            <option value="a">a</option>
-                            <option value="a">a</option>
-                            <option value="a">a</option>
-                            <option value="a">a</option>
-                            <option value="a">a</option>
+                            <option value="Sir Ghous Ahmed">Sir Ghous Ahmed</option>
+                            <option value="Sir Haider Ali">Sir Haider Ali</option>
+                            <option value="Sir Inzimaan Malik">Sir Inzimaan Malik</option>
                         </select>
                     </div>
                     <div>
@@ -128,11 +158,9 @@
                         <br>
                         <select>
                             <option value="select">Section Name</option>
-                            <option value="a">a</option>
-                            <option value="a">a</option>
-                            <option value="a">a</option>
-                            <option value="a">a</option>
-                            <option value="a">a</option>
+                            <option value="a">A</option>
+                            <option value="b">B</option>
+                            <option value="c">C</option>
                         </select>
                     </div>
                 </div>
@@ -142,11 +170,10 @@
                         <br>
                         <select>
                             <option value="select">Course Name</option>
-                            <option value="a">a</option>
-                            <option value="a">a</option>
-                            <option value="a">a</option>
-                            <option value="a">a</option>
-                            <option value="a">a</option>
+                            <option value="web and mobile">Web and Mobile</option>
+                            <option value="graphic designing">Graphic Designing</option>
+                            <option value="mobile repairing">Mobile Repairing</option>
+                            <option value="ai chat bot">AI Chat Bot</option>
                         </select>
                     </div>
                     <div>
@@ -154,11 +181,8 @@
                         <br>
                         <select>
                             <option value="select">Batch Number</option>
-                            <option value="a">a</option>
-                            <option value="a">a</option>
-                            <option value="a">a</option>
-                            <option value="a">a</option>
-                            <option value="a">a</option>
+                            <option value="08">08</option>
+                            <option value="09">09</option>
                         </select>
                     </div>
                 </div>
