--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
 </head>
 <body>
     
+<h3>
+  id: ebad@gmail.com
+  password: aA2@aaaa
+</h3>
+
 <div class="login">
     <div class="login-page">
         <div class="form">
